[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Sprites/Backgrounds/back.png" type="Texture" id=1]
[ext_resource path="res://default_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Scripts/PlayerPlane.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/Vfx/explosion/frame_01_delay-0.08s.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/plane/base_plane.png" type="Texture" id=5]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Sfx/plane.ogg" type="AudioStream" id=7]
[ext_resource path="res://Scripts/CameraPlaneController.gd" type="Script" id=8]
[ext_resource path="res://Assets/Sprites/Vfx/explosion/frame_00_delay-0.08s.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Eagle.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/DeathZone.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Gem.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Sfx/sky run.ogg" type="AudioStream" id=13]

[sub_resource type="CapsuleShape2D" id=1]
radius = 35.5647
height = 105.838

[sub_resource type="Animation" id=2]
resource_name = "Trail"
length = 30.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.2, 0, 30 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 360 ), Vector2( 640, 360 ), Vector2( 10240, 360 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 157.797, 1035.17 )

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0.905882, 0.921569, 0.639216, 1, 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6810, 40 )

[node name="Node2D" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ 720.015 ],
"_edit_vertical_guides_": [ 10002.7 ]
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )
centered = false

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 33, 1, 0, 34, 1, 0, 35, 1, 0, 36, 1, 0, 37, 1, 0, 38, 1, 0, 39, 1, 0, 40, 1, 0, 41, 1, 0, 42, 1, 0, 43, 1, 0, 44, 1, 0, 45, 1, 0, 46, 1, 0, 47, 1, 0, 48, 1, 0, 49, 1, 0, 50, 1, 0, 51, 1, 0, 52, 1, 0, 53, 1, 0, 54, 1, 0, 55, 1, 0, 56, 1, 0, 57, 1, 0, 58, 1, 0, 59, 1, 0, 60, 1, 0, 61, 1, 0, 62, 1, 0, 63, 1, 0, 64, 1, 0, 65, 1, 0, 66, 1, 0, 67, 1, 0, 68, 1, 0, 69, 1, 0, 70, 1, 0, 71, 1, 0, 72, 1, 0, 73, 1, 0, 74, 1, 0, 75, 1, 0, 76, 1, 0, 77, 1, 0, 78, 1, 0, 79, 1, 0, 80, 1, 0, 81, 1, 0, 82, 1, 0, 83, 1, 0, 84, 1, 0, 85, 1, 0, 86, 1, 0, 87, 1, 0, 88, 1, 0, 89, 1, 0, 90, 1, 0, 91, 1, 0, 92, 1, 0, 93, 1, 0, 94, 1, 0, 95, 1, 0, 96, 1, 0, 97, 1, 0, 98, 1, 0, 99, 1, 0, 100, 1, 0, 101, 1, 0, 102, 1, 0, 103, 1, 0, 104, 1, 0, 105, 1, 0, 106, 1, 0, 107, 1, 0, 108, 1, 0, 109, 1, 0, 110, 1, 0, 111, 1, 0, 112, 1, 0, 113, 1, 0, 114, 1, 0, 115, 1, 0, 116, 1, 0, 117, 1, 0, 118, 1, 0, 119, 1, 0, 120, 1, 0, 121, 1, 0, 122, 1, 0, 123, 1, 0, 124, 1, 0, 125, 1, 0, 126, 1, 0, 127, 1, 0, 128, 1, 0, 129, 1, 0, 130, 1, 0, 131, 1, 0, 132, 1, 0, 133, 1, 0, 134, 1, 0, 135, 1, 0, 136, 1, 0, 137, 1, 0, 138, 1, 0, 139, 1, 0, 140, 1, 0, 141, 1, 0, 142, 1, 0, 143, 1, 0, 144, 1, 0, 145, 1, 0, 146, 1, 0, 147, 1, 0, 148, 1, 0, 149, 1, 0, 150, 1, 0, 151, 1, 0, 152, 1, 0, 153, 1, 0, 154, 1, 0, 155, 1, 0, 156, 1, 0, 157, 1, 0, 158, 1, 0, 159, 1, 0, 160, 1, 0, 161, 1, 0, 162, 1, 0, 163, 1, 0, 164, 1, 0, 165, 1, 0, 166, 1, 0, 167, 1, 0, 168, 1, 0, 169, 1, 0, 170, 1, 0, 171, 1, 0, 172, 1, 0, 173, 1, 0, 174, 1, 0, 175, 1, 0, 176, 1, 0, 177, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 720926, 1, 0, 720927, 1, 0, 720928, 1, 0, 720929, 1, 0, 720930, 1, 0, 720931, 1, 0, 720932, 1, 0, 720933, 1, 0, 720934, 1, 0, 720935, 1, 0, 720936, 1, 0, 720937, 1, 0, 720938, 1, 0, 720939, 1, 0, 720940, 1, 0, 720941, 1, 0, 720942, 1, 0, 720943, 1, 0, 720944, 1, 0, 720945, 1, 0, 720946, 1, 0, 720947, 1, 0, 720948, 1, 0, 720949, 1, 0, 720950, 1, 0, 720951, 1, 0, 720952, 1, 0, 720953, 1, 0, 720954, 1, 0, 720955, 1, 0, 720956, 1, 0, 720957, 1, 0, 720958, 1, 0, 720959, 1, 0, 720960, 1, 0, 720961, 1, 0, 720962, 1, 0, 720963, 1, 0, 720964, 1, 0, 720965, 1, 0, 720966, 1, 0, 720967, 1, 0, 720968, 1, 0, 720969, 1, 0, 720970, 1, 0, 720971, 1, 0, 720972, 1, 0, 720973, 1, 0, 720974, 1, 0, 720975, 1, 0, 720976, 1, 0, 720977, 1, 0, 720978, 1, 0, 720979, 1, 0, 720980, 1, 0, 720981, 1, 0, 720982, 1, 0, 720983, 1, 0, 720984, 1, 0, 720985, 1, 0, 720986, 1, 0, 720987, 1, 0, 720988, 1, 0, 720989, 1, 0, 720990, 1, 0, 720991, 1, 0, 720992, 1, 0, 720993, 1, 0, 720994, 1, 0, 720995, 1, 0, 720996, 1, 0, 720997, 1, 0, 720998, 1, 0, 720999, 1, 0, 721000, 1, 0, 721001, 1, 0, 721002, 1, 0, 721003, 1, 0, 721004, 1, 0, 721005, 1, 0, 721006, 1, 0, 721007, 1, 0, 721008, 1, 0, 721009, 1, 0, 721010, 1, 0, 721011, 1, 0, 721012, 1, 0, 721013, 1, 0, 721014, 1, 0, 721015, 1, 0, 721016, 1, 0, 721017, 1, 0, 721018, 1, 0, 721019, 1, 0, 721020, 1, 0, 721021, 1, 0, 721022, 1, 0, 721023, 1, 0, 721024, 1, 0, 721025, 1, 0, 721026, 1, 0, 721027, 1, 0, 721028, 1, 0, 721029, 1, 0, 721030, 1, 0, 721031, 1, 0, 721032, 1, 0, 721033, 1, 0, 721034, 1, 0, 721035, 1, 0, 721036, 1, 0, 721037, 1, 0, 721038, 1, 0, 721039, 1, 0, 721040, 1, 0, 721041, 1, 0, 721042, 1, 0, 721043, 1, 0, 721044, 1, 0, 721045, 1, 0, 721046, 1, 0, 721047, 1, 0, 721048, 1, 0, 721049, 1, 0, 721050, 1, 0, 721051, 1, 0, 721052, 1, 0, 721053, 1, 0, 721054, 1, 0, 721055, 1, 0, 721056, 1, 0, 721057, 1, 0, 721058, 1, 0, 721059, 1, 0, 721060, 1, 0, 721061, 1, 0, 721062, 1, 0, 721063, 1, 0, 721064, 1, 0, 721065, 1, 0, 721066, 1, 0, 721067, 1, 0, 721068, 1, 0, 721069, 1, 0, 721070, 1, 0, 721071, 1, 0, 721072, 1, 0, 721073, 1, 0, 2424824, 1, 0, 2424825, 1, 0, 2424826, 1, 0, 2424827, 1, 0, 2424828, 1, 0, 2424829, 1, 0, 2424830, 1, 0 )

[node name="PlayerPlane" type="KinematicBody2D" parent="."]
position = Vector2( 454.358, 336.905 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerPlane"]
position = Vector2( -0.463287, -2.31645 )
rotation = 1.57079
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="PlayerPlane"]
position = Vector2( -64.358, -2.905 )
amount = 200
lifetime = 5.0
randomness = 1.0
local_coords = false
texture = ExtResource( 4 )
gravity = Vector2( -90, -90 )
scale_amount = 0.9

[node name="Sprite" type="Sprite" parent="PlayerPlane"]
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="PlayerPlane"]

[node name="UI" parent="PlayerPlane" instance=ExtResource( 6 )]
has_visibility_notifier = true
is_single_hand = true

[node name="FinishingTimer" type="Timer" parent="PlayerPlane"]
wait_time = 4.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PlayerPlane"]
stream = ExtResource( 7 )
autoplay = true
bus = "SFX"

[node name="CameraAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Trail = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 640, 360 )
current = true
script = ExtResource( 8 )
camera_animation_player_path = NodePath("../CameraAnimationPlayer")

[node name="FinishingArea2D" type="Area2D" parent="."]
position = Vector2( 9850, 420 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishingArea2D"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="FinishingArea2D"]
position = Vector2( 0, 53 )
amount = 512
lifetime = 2.58
texture = ExtResource( 9 )
emission_shape = 2
emission_rect_extents = Vector2( 100, 900 )
gravity = Vector2( 0, 0 )
color_ramp = SubResource( 4 )

[node name="Eagle" parent="." instance=ExtResource( 10 )]
position = Vector2( 1190, 460 )

[node name="Eagle2" parent="." instance=ExtResource( 10 )]
position = Vector2( 1550, 258 )

[node name="Eagle25" parent="." instance=ExtResource( 10 )]
position = Vector2( 1690, 630 )

[node name="Eagle26" parent="." instance=ExtResource( 10 )]
position = Vector2( 1980, 390 )

[node name="Eagle3" parent="." instance=ExtResource( 10 )]
position = Vector2( 2385.34, 112.011 )

[node name="Eagle4" parent="." instance=ExtResource( 10 )]
position = Vector2( 2480, 190 )

[node name="Eagle11" parent="." instance=ExtResource( 10 )]
position = Vector2( 2580, 270 )

[node name="Eagle12" parent="." instance=ExtResource( 10 )]
position = Vector2( 2672.69, 360.222 )

[node name="Eagle13" parent="." instance=ExtResource( 10 )]
position = Vector2( 2770, 434 )

[node name="Eagle14" parent="." instance=ExtResource( 10 )]
position = Vector2( 2860, 516 )

[node name="Eagle15" parent="." instance=ExtResource( 10 )]
position = Vector2( 2950, 540 )

[node name="Eagle16" parent="." instance=ExtResource( 10 )]
position = Vector2( 3050, 500 )

[node name="Eagle17" parent="." instance=ExtResource( 10 )]
position = Vector2( 3130, 397 )

[node name="Eagle18" parent="." instance=ExtResource( 10 )]
position = Vector2( 3200, 290 )

[node name="Eagle19" parent="." instance=ExtResource( 10 )]
position = Vector2( 3280, 194 )

[node name="Eagle24" parent="." instance=ExtResource( 10 )]
position = Vector2( 3350, 110 )

[node name="Eagle5" parent="." instance=ExtResource( 10 )]
position = Vector2( 4140, 342 )

[node name="Eagle20" parent="." instance=ExtResource( 10 )]
position = Vector2( 4140, 234 )

[node name="Eagle21" parent="." instance=ExtResource( 10 )]
position = Vector2( 4140, 439 )

[node name="Eagle22" parent="." instance=ExtResource( 10 )]
position = Vector2( 4140, 540 )

[node name="Eagle23" parent="." instance=ExtResource( 10 )]
position = Vector2( 4140, 640 )

[node name="Eagle6" parent="." instance=ExtResource( 10 )]
position = Vector2( 5107.13, 577.412 )

[node name="Eagle7" parent="." instance=ExtResource( 10 )]
position = Vector2( 6014.71, 319.468 )

[node name="Eagle27" parent="." instance=ExtResource( 10 )]
position = Vector2( 6540, 315 )

[node name="Eagle8" parent="." instance=ExtResource( 10 )]
position = Vector2( 7075.14, 481.877 )

[node name="Eagle9" parent="." instance=ExtResource( 10 )]
position = Vector2( 8221.56, 319.468 )

[node name="Eagle10" parent="." instance=ExtResource( 10 )]
position = Vector2( 9033.6, 434.11 )

[node name="DeathZone" parent="." instance=ExtResource( 11 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( 4890, 30 )
shape = SubResource( 5 )

[node name="DeathZone2" parent="." instance=ExtResource( 11 )]
position = Vector2( 16, 710 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone2"]
position = Vector2( 4864, 30 )
shape = SubResource( 5 )

[node name="GEMS" type="Node2D" parent="."]

[node name="Gem" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 2090, 194 )

[node name="Gem8" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 3020, 645 )

[node name="Gem27" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 5400, 354 )

[node name="Gem42" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6433, 499 )

[node name="Gem59" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6420, 202 )

[node name="Gem30" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 5600, 352 )

[node name="Gem45" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6633, 497 )

[node name="Gem55" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6620, 200 )

[node name="Gem34" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 5800, 352 )

[node name="Gem38" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6833, 497 )

[node name="Gem54" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6820, 200 )

[node name="Gem10" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 3500, 501 )

[node name="Gem16" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 4390, 190 )

[node name="Gem22" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 4640, 423 )

[node name="Gem13" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 3560, 452 )

[node name="Gem18" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 4340, 140 )

[node name="Gem19" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 4590, 373 )

[node name="Gem2" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 2040, 194 )

[node name="Gem5" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 2970, 645 )

[node name="Gem26" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 5350, 354 )

[node name="Gem47" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6383, 499 )

[node name="Gem48" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6370, 202 )

[node name="Gem31" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 5550, 352 )

[node name="Gem46" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6583, 497 )

[node name="Gem50" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6570, 200 )

[node name="Gem35" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 5750, 352 )

[node name="Gem40" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6783, 497 )

[node name="Gem57" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6770, 200 )

[node name="Gem11" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 3440, 550 )

[node name="Gem15" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 4440, 234 )

[node name="Gem23" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 4690, 467 )

[node name="Gem3" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 1990, 197 )

[node name="Gem6" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 2920, 646 )

[node name="Gem24" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 5300, 355 )

[node name="Gem36" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6333, 500 )

[node name="Gem52" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6320, 203 )

[node name="Gem28" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 5500, 353 )

[node name="Gem43" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6533, 498 )

[node name="Gem49" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6520, 201 )

[node name="Gem32" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 5700, 353 )

[node name="Gem39" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6733, 498 )

[node name="Gem56" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6720, 201 )

[node name="Gem12" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 3380, 600 )

[node name="Gem17" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 4490, 285 )

[node name="Gem20" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 4740, 518 )

[node name="Gem4" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 1940, 200 )

[node name="Gem7" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 2870, 646 )

[node name="Gem25" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 5250, 355 )

[node name="Gem37" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6283, 500 )

[node name="Gem53" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6270, 203 )

[node name="Gem29" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 5450, 353 )

[node name="Gem44" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6483, 498 )

[node name="Gem51" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6470, 201 )

[node name="Gem33" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 5650, 353 )

[node name="Gem41" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6683, 498 )

[node name="Gem58" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 6670, 201 )

[node name="Gem9" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 3320, 650 )

[node name="Gem14" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 4540, 334 )

[node name="Gem21" parent="GEMS" instance=ExtResource( 12 )]
position = Vector2( 4790, 567 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
autoplay = true
bus = "Background"
[connection signal="screen_exited" from="PlayerPlane/VisibilityNotifier2D" to="PlayerPlane" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="PlayerPlane/FinishingTimer" to="PlayerPlane" method="_on_FinishingTimer_timeout"]
[connection signal="body_entered" from="FinishingArea2D" to="PlayerPlane" method="_on_RigidBody2D_body_entered"]
